--- a/swig/CMakeLists.txt
+++ b/swig/CMakeLists.txt
@@ -40,3 +40,6 @@ add_custom_command(
     POST_BUILD
     COMMAND ${Java_JAVA_EXECUTABLE} -Djava.library.path=. -jar LibTesterMain.jar "JNI jar call success"
 )
+
+install(FILES ${CMAKE_BINARY_DIR}/swig/clsjJNI.jar DESTINATION bin)
+install(TARGETS clsj_swiggy DESTINATION bin)
